--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <div id="menu">
          <a href="#">Home</a>
          <a href="about.html">About Us</a>
-         <a href="contact us.html">Contact Us</a>
+         <a href="contact us.html">Contact</a>
         </div>
     </head>
         <body>
