--- a/contact us.html
+++ b/contact us.html
@@ -5,7 +5,7 @@
         <a href="index.html">Back to Home</a>
     </head>
         <body> 
-            <h2> Contact Us</h2>
+            <h2> About Rooted</h2>
             <p><b>Email:</b> info@rootedhearts.com </p>
             <p><b>Phone:</b> 011 648 3277 </p>
         </body>
